change in navbar and fix widgets on small screens

--- a/CSS/Main.scss
+++ b/CSS/Main.scss
@@ -47,7 +47,7 @@ background: #555;
     height: 50px; 
     text-align: center; 
     border-radius: 50%; 
-    box-shadow: black 2px 2px 2px; 
+    box-shadow: 4px 4px 8px black;
     background-color: #cfcfcf4b;
     position: fixed; 
     right: 20px; 
@@ -85,6 +85,18 @@ background: #555;
 
 #navbarLinks h2 {
     padding-left: 20px;
+}
+
+#navbarTopButton {
+    position: absolute;
+    bottom: 120px;
+    width: 90%;
+    margin-left: 5%;
+    padding: 6px;
+    border: 2px solid $accent-color;
+    box-shadow: 4px 4px 8px black;
+    background-color: #cfcfcf4b;
+    border-radius: 10px;
 }
 
 input[type=checkbox] {
@@ -215,7 +227,8 @@ input[type=checkbox]:focus {
 #contactMe {
     background-color: transparent;
     border: 2px solid $accent-color;
-    border-radius: 0.6em;
+    border-radius: 10px;
+    box-shadow: 4px 4px 8px black;
     color: $accent-color;
     cursor: pointer;
     display: inline-block;
@@ -243,6 +256,10 @@ input[type=checkbox]:focus {
     color: $text-color;
     outline: 0;
     background-position: 0;
+}
+
+#contactMe:active {
+    box-shadow: 0px 0px 0px #fff;
 }
 
 #headline > h1, #oldText > h1 {
@@ -308,7 +325,7 @@ input[type=checkbox]:focus {
     box-shadow: 5px 5px 5px #00000046;
     max-width: 475px !important;
     margin-left: 0px !important;
-    padding: 15px;
+    padding: 8px;
 }
 
 .weatherContainer{
@@ -316,6 +333,9 @@ input[type=checkbox]:focus {
     background: linear-gradient(to bottom, #87CEEB 0%, #78BFDC 100%);
 }
 
+.weatherContainer h1, .dateContainer h1{
+    line-height: 1 !important;
+}
     
 #Circle1, #Circle2, #Circle3 {
     position: absolute;
@@ -602,6 +622,7 @@ sup {
     position: absolute;
     bottom: 20px;
     width: calc(100% - 40px);
+    border-radius: 10px;
 }
 
 .card-text {
@@ -611,6 +632,7 @@ sup {
 .card {
     background-color: #00000000 !important;
     border: #00000000 0px solid !important;
+    border-radius: 10px;
 }
 
 .row {
@@ -651,7 +673,7 @@ sup {
 }
 
 iframe {
-    border-radius: .25rem;
+    border-radius: 10px;
     height: calc(100% - 37px);
     width: calc(100% - 2px);
     border: none;
@@ -670,20 +692,19 @@ iframe {
 #eddlerWebsite > h4 {
     color: #008cff;
     background-color: #000000bb;
-    border-radius: .25rem;
+    border-radius: 10px;
     padding: 7px;
     border: #008cff 2px solid;
     margin-bottom: 0px;
 }
 
 .smallCard, .smallCard > div, .smallCard > div > ul{
-    border-radius: .25rem;
+    border-radius: 10px;
 }
 
 .smallCard {
     width: 100%;
     margin-bottom: 10px;
-
 }
 
 #frontendContainer {
@@ -752,7 +773,7 @@ iframe {
 .programButton {
     width: 11px;
     height: 11px;
-    border-radius: 11px;
+    border-radius: 50%;
     padding: 0px !important;
     display:inline-flex;
     cursor: pointer;
@@ -787,6 +808,8 @@ iframe {
 @media (min-width: 395px) {
     .weatherContainer, .dateContainer {
         height: 90px;
+        padding: 15px;
+        line-height: 1.2;
     }
 
     #Condition, #date{
